Correction problème z-index sur menu
Le menu passait en dessous des controles de la carte bazar en page principale. Z-index a 1000 !!

--- a/lpcpct/styles/default.css
+++ b/lpcpct/styles/default.css
@@ -90,6 +90,10 @@ nav:after {
 	float: right;
 }
 
+.dropdown {
+	z-index: 1500;
+}
+
 .dropdown-menu {
 	background: white;
 	border-radius: 0;
